generating playlists from clusters (WIP)

--- a/spotify clustering.ipynb
+++ b/spotify clustering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 258,
    "id": "coupled-ridge",
    "metadata": {},
    "outputs": [
@@ -12,8 +12,8 @@
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: spotipy in /home/pcarver/.local/lib/python3.8/site-packages (2.18.0)\n",
-      "Requirement already satisfied: six>=1.15.0 in /opt/conda/lib/python3.8/site-packages (from spotipy) (1.15.0)\n",
       "Requirement already satisfied: requests>=2.25.0 in /home/pcarver/.local/lib/python3.8/site-packages (from spotipy) (2.25.1)\n",
+      "Requirement already satisfied: six>=1.15.0 in /opt/conda/lib/python3.8/site-packages (from spotipy) (1.15.0)\n",
       "Requirement already satisfied: urllib3>=1.26.0 in /home/pcarver/.local/lib/python3.8/site-packages (from spotipy) (1.26.5)\n",
       "Requirement already satisfied: chardet<5,>=3.0.2 in /opt/conda/lib/python3.8/site-packages (from requests>=2.25.0->spotipy) (3.0.4)\n",
       "Requirement already satisfied: idna<3,>=2.5 in /opt/conda/lib/python3.8/site-packages (from requests>=2.25.0->spotipy) (2.8)\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 259,
    "id": "prepared-conclusion",
    "metadata": {},
    "outputs": [],
@@ -45,14 +45,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 260,
    "id": "pretty-corps",
    "metadata": {},
    "outputs": [],
    "source": [
     "CLIENT_ID     = 'df768b43d2cd406a9605cd8261680906'\n",
     "CLIENT_SECRET = '0db4a7ce151f424eb51e0da9fbc4985f'\n",
-    "REDIRECT_URI  = 'https://localhost'\n",
+    "CLIENT_USERNAME = '1236559229'\n",
+    "REDIRECT_URI  = 'https://localhost' #'http://127.0.0.1:8888/callback/'\n",
     "\n",
     "credentials = oauth2.SpotifyClientCredentials(\n",
     "        client_id=CLIENT_ID,\n",
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": null,
    "id": "academic-export",
    "metadata": {},
    "outputs": [],
@@ -88,7 +89,225 @@
     "\n",
     "# client_credentials_manager = SpotifyClientCredentials(client_id=CLIENT_ID, client_secret=CLIENT_SECRET)\n",
     "# sp = spotipy.Spotify(client_credentials_manager=client_credentials_manager)\n",
-    "\n"
+    "\n",
+    "import os\n",
+    "spotify_user = os.environ.get('CLIENT_USERNAME')\n",
+    "spotify_scope = 'playlist-modify-public'\n",
+    "oauth = SpotifyOAuth(client_id=CLIENT_ID, client_secret=CLIENT_SECRET, \n",
+    "                     redirect_uri=REDIRECT_URI, username=spotify_user, scope=spotify_scope)\n",
+    "# user_token = oauth.get_access_token(as_dict=False)\n",
+    "\n",
+    "# sp = spotipy.Spotify(auth=user_token) \n",
+    "# https://open.spotify.com/user/1236559229?si=9f717c79da42409b\n",
+    "token = util.prompt_for_user_token(username=spotify_user, scope=spotify_scope, \n",
+    "                                   client_id=CLIENT_ID, client_secret=CLIENT_SECRET, \n",
+    "                                   redirect_uri='https://open.spotify.com/user/1236559229')\n",
+    "sp = spotipy.Spotify(auth=token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 334,
+   "id": "different-liechtenstein",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import base64\n",
+    "import requests\n",
+    "import datetime\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 316,
+   "id": "prepared-storm",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client_creds = f'{CLIENT_ID}:{CLIENT_SECRET}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 317,
+   "id": "fallen-citation",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'ZGY3NjhiNDNkMmNkNDA2YTk2MDVjZDgyNjE2ODA5MDY6MGRiNGE3Y2UxNTFmNDI0ZWI1MWUwZGE5ZmJjNDk4NWY='\n"
+     ]
+    }
+   ],
+   "source": [
+    "client_creds.encode() # to byte string\n",
+    "client_creds_b64 = base64.b64encode(client_creds.encode())\n",
+    "print(client_creds_b64) # type bytes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 318,
+   "id": "opposite-highlight",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'access_token': 'BQDcXbMSzzD_ZNxiQCX0LXaAmbaDVC--EKDWzWdvsq9zCfuf88d9jlT6g2L6NFeUR7BabSGkc_lQvqP048w', 'token_type': 'Bearer', 'expires_in': 3600}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get token\n",
+    "token_url = 'https://accounts.spotify.com/api/token'\n",
+    "method = 'POST'\n",
+    "token_data = {\n",
+    "    'grant_type': \"client_credentials\"\n",
+    "}\n",
+    "token_headers = {\n",
+    "    'Authorization': f\"Basic {client_creds_b64.decode()}\" # <base64 encoded client_id:client_secret>\n",
+    "}\n",
+    "token_headers\n",
+    "\n",
+    "# call and do the request\n",
+    "r = requests.post(token_url, data=token_data, headers=token_headers)\n",
+    "print(r.json())\n",
+    "access_token = r.json()['access_token']\n",
+    "valid_request = r.status_code in range(200, 299)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 319,
+   "id": "conscious-wagon",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get expiration\n",
+    "if valid_request:\n",
+    "    token_response_data = r.json()\n",
+    "    now = datetime.datetime.now()\n",
+    "    access_token = token_response_data['access_token']\n",
+    "    expires_in = token_response_data['expires_in']\n",
+    "    expires = now + datetime.timedelta(seconds=expires_in) # give a date time object that is relative to now\n",
+    "    did_expires = expires < now "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 345,
+   "id": "comparative-warren",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "400"
+      ]
+     },
+     "execution_count": 345,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user_id = '1236559229'\n",
+    "endpoint_url = f'https://api.spotify.com/v1/users/{user_id}/playlists'\n",
+    "request_body = {'name' : 'clustering playlist',\n",
+    "                'description' : 'COGS118B FINAL PROJECT',\n",
+    "                'public' : False }\n",
+    "r = requests.get(url = endpoint_url, data = request_body, headers={\"Content-Type\":\"application/json\", \n",
+    "                        'Authorization': f\"Basic {client_creds_b64.decode()}\"})\n",
+    "\n",
+    "r.status_code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 348,
+   "id": "confirmed-hometown",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'5w9gZaN7eHi5kFnn8atHRj'"
+      ]
+     },
+     "execution_count": 348,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ids[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 349,
+   "id": "trying-bacon",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "HTTP Error for POST to https://api.spotify.com/v1/playlists/0iwecSpqyN0AaC5H87NnfY/tracks returned 403 due to This request requires user authentication.\n"
+     ]
+    },
+    {
+     "ename": "SpotifyException",
+     "evalue": "http status: 403, code:-1 - https://api.spotify.com/v1/playlists/0iwecSpqyN0AaC5H87NnfY/tracks:\n This request requires user authentication., reason: None",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mHTTPError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/spotipy/client.py\u001b[0m in \u001b[0;36m_internal_call\u001b[0;34m(self, method, url, payload, params)\u001b[0m\n\u001b[1;32m    244\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 245\u001b[0;31m             \u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mraise_for_status\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    246\u001b[0m             \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/requests/models.py\u001b[0m in \u001b[0;36mraise_for_status\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    942\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mhttp_error_msg\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 943\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mHTTPError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhttp_error_msg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    944\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mHTTPError\u001b[0m: 403 Client Error: Forbidden for url: https://api.spotify.com/v1/playlists/0iwecSpqyN0AaC5H87NnfY/tracks",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mSpotifyException\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-349-6fb730a3212a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0msp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mspotipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSpotify\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mauth\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maccess_token\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0msp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplaylist_add_items\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'0iwecSpqyN0AaC5H87NnfY'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'5w9gZaN7eHi5kFnn8atHRj'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/spotipy/client.py\u001b[0m in \u001b[0;36mplaylist_add_items\u001b[0;34m(self, playlist_id, items, position)\u001b[0m\n\u001b[1;32m   1023\u001b[0m         \u001b[0mplid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_id\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"playlist\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mplaylist_id\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1024\u001b[0m         \u001b[0mftracks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_uri\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"track\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtid\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mtid\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mitems\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1025\u001b[0;31m         return self._post(\n\u001b[0m\u001b[1;32m   1026\u001b[0m             \u001b[0;34m\"playlists/%s/tracks\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mplid\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1027\u001b[0m             \u001b[0mpayload\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mftracks\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/spotipy/client.py\u001b[0m in \u001b[0;36m_post\u001b[0;34m(self, url, args, payload, **kwargs)\u001b[0m\n\u001b[1;32m    294\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    295\u001b[0m             \u001b[0mkwargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 296\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_internal_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"POST\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0murl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpayload\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    297\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    298\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_delete\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0murl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpayload\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/spotipy/client.py\u001b[0m in \u001b[0;36m_internal_call\u001b[0;34m(self, method, url, payload, params)\u001b[0m\n\u001b[1;32m    259\u001b[0m                          method, url, response.status_code, msg)\n\u001b[1;32m    260\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 261\u001b[0;31m             raise SpotifyException(\n\u001b[0m\u001b[1;32m    262\u001b[0m                 \u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstatus_code\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    263\u001b[0m                 \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mSpotifyException\u001b[0m: http status: 403, code:-1 - https://api.spotify.com/v1/playlists/0iwecSpqyN0AaC5H87NnfY/tracks:\n This request requires user authentication., reason: None"
+     ]
+    }
+   ],
+   "source": [
+    "sp = spotipy.Spotify(auth=access_token)\n",
+    "sp.playlist_add_items('0iwecSpqyN0AaC5H87NnfY', '5w9gZaN7eHi5kFnn8atHRj')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 332,
+   "id": "pressing-hungary",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n"
+     ]
+    }
+   ],
+   "source": [
+    "access_token\n",
+    "header= {\n",
+    "    'Authorization': f'Bearer {access_token}'\n",
+    "}\n",
+    "endpoint = 'https://open.spotify.com/user/1236559229'\n",
+    "r = requests.get(endpoint, headers=header) # user_id='1236559229', name='Playlist'\n",
+    "print(r.status_code)"
    ]
   },
   {
